fix: adnroid client version

--- a/src/pages/account-user.f7.html
+++ b/src/pages/account-user.f7.html
@@ -8,7 +8,7 @@
           <i class="icon f7-icons padding-left">person_alt_circle</i>
         </a>
       </div>
-      <div class="title">Developer</div>
+      <div class="title"></div>
       <div class="right">
         <a href="/keranjang/" class="link icon-only tab-link">
           <i class="icon f7-icons">cart<span class="badge color-red cart-label" style="display: none;">0</span></i>
